--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: AwsSum
+title: Homepage
 tagline: Node.js modules for talking to lots of Web Service APIs.
 sitemap : true
 ---
