Add some buttons to the front page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ sitemap : true
     <p>
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
-    <p><a class="btn btn-primary btn-large"></a></p>
+    <p>
+      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">Git Repo &raquo;</a>
+      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
+      <a class="btn btn-primary btn-large" href="http://twitter.com/andychilton">Follow chilts on Twitter &raquo;</a>
+    </p>
   </div>
 
   <div class="row-fluid">
