Wrap all content in a content-* <div>

--- a/f/async.html
+++ b/f/async.html
@@ -1,3 +1,5 @@
+<div class="content content-async">
+
 <h1>Async</h1>
 
 <p>
@@ -26,3 +28,5 @@ service.Operation(function(err, result) {
   control library to make things easier, then I don't need to explain further since you've already figured the whole
   async+callbacks thing out. :)
 </p>
+
+</div>
