--- a/f/installing.html
+++ b/f/installing.html
@@ -1,3 +1,5 @@
+<div class="content content-installing">
+
 <h1>Installing</h1>
 
 <p>
@@ -16,3 +18,5 @@ $ npm install awssum
 $ wget https://github.com/appsattic/node-awssum/zipball/master
 $ wget https://github.com/appsattic/node-awssum/tarball/master
 </pre>
+
+</div>
