--- a/f/loading.html
+++ b/f/loading.html
@@ -1,3 +1,5 @@
+<div class="content content-loading">
+
 <h1>Loading AwsSum</h1>
 
 <p>
@@ -25,3 +27,5 @@ var s3 = new S3({
     'region' : amazon.US_EAST_1
 });
 </pre>
+
+</div>
