--- a/f/operations.html
+++ b/f/operations.html
@@ -1,3 +1,5 @@
+<div class="content content-operations">
+
 <h1>Operations</h1>
 
 <p>
@@ -57,3 +59,5 @@ s3.ListObjects(opts, function(err, result) {
   Now you're ready to start making calls to the service. You could take a look here for <a href="#amazon-s3">Amazon
   S3<a>, or click on the service of interest to you from the left-hand menu.
 </p>
+
+</div>
