More fixes for the caching part

--- a/f/async.html
+++ b/f/async.html
@@ -13,7 +13,7 @@
   everything went well you're free to use the result for whatever purpose you require:
 </p>
 
-<code>
+<pre>
 service.Operation(function(err, result) {
     if (err) {
         console.log('An error has occurred', err);
@@ -21,7 +21,7 @@ service.Operation(function(err, result) {
     }
     console.log('Buckets', result);
 });
-</code>
+</pre>
 
 <p>
   Pretty much all calls you'll ever make will look fairly similar to the one above. If you're using some kind of flow
