Make the menu smaller

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ sitemap : true
   <div class="row-fluid">
 
     <div class="span4">
-      <h2>Heading</h2>
+      <h2>Used by AppsAttic</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
@@ -30,7 +30,7 @@ sitemap : true
       <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-      <h2>Heading</h2>
+      <h2>Used by SomeoneFinish</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
@@ -39,38 +39,7 @@ sitemap : true
       <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-      <h2>Heading</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
-
-  </div><!-- /.row-fluid -->
-
-  <div class="row-fluid">
-    <div class="span4">
-      <h2>Heading</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
-    <div class="span4">
-      <h2>Heading</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
-    <div class="span4">
-      <h2>Heading</h2>
+      <h2>Used by IndoGames</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
