Test new layout

--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -2,7 +2,7 @@
 
   <div class="row-fluid">
 
-    <div class="span4">
+    <div class="span2">
 
       <div class="well sidebar-nav">
         <ul class="nav nav-list">
@@ -16,17 +16,32 @@
         </ul>
       </div><!-- /.well -->
 
-    </div><!-- /.span4 -->
+    </div><!-- /.span2 -->
 
-    <div class="span8">
+    <div class="span10">
+
       <h2>Used by SomeoneFinish</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
         sed odio dui.
       </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span8 -->
+<pre>
+service.Operation(function(err, result) {
+    if (err) {
+        console.log('An error has occurred', err);
+        return;
+    }
+    console.log('Buckets', result);
+});
+</pre>
+      <p>
+        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
+        sed odio dui.
+      </p>
+
+    </div><!-- /.span10 -->
 
   </div><!-- /.row-fluid -->
 
