Add a header to the menu

--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -3,19 +3,15 @@
   <div class="row-fluid">
 
     <div class="span4">
-
       <div class="well sidebar-nav">
+        <h2>Amazon S3</h2>
         <ul class="nav nav-list">
-
           <li class="nav-header">Basics</li>
           <li><a href="#amazon-s3/intro">Intro</a></li>
-
           <li class="nav-header">Operations on the Service</li>
           <li><a href="#amazon-s3/Listbuckets">ListBuckets</a></li>
-
         </ul>
       </div><!-- /.well -->
-
     </div><!-- /.span4 -->
 
     <div class="span8">
