Trying to make it look pretty

--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -4,19 +4,21 @@
 
     <div class="span4">
       <div class="well sidebar-nav">
-        <h2>Amazon S3</h2>
         <ul class="nav nav-list">
-          <li class="nav-header">Basics</li>
+          <li class="nav-header">Service Menu</li>
           <li><a href="#amazon-s3/intro">Intro</a></li>
           <li class="nav-header">Operations on the Service</li>
-          <li><a href="#amazon-s3/Listbuckets">ListBuckets</a></li>
+          <li><a href="#amazon-s3/ListBuckets">ListBuckets</a></li>
+          <li><a href="#amazon-s3/ListObjects">ListObjects</a></li>
+          <li><a href="#amazon-s3/PutObject">PutObject</a></li>
+          <li><a href="#amazon-s3/GetObject">GetObject</a></li>
         </ul>
       </div><!-- /.well -->
     </div><!-- /.span4 -->
 
     <div class="span8">
 
-      <h2>Used by SomeoneFinish</h2>
+      <h2>Amazon S3</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
