--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -3,6 +3,9 @@
   <div class="row-fluid">
 
     <div class="span4">
+      <h2>Amazon S3</h2>
+      <h3>Operations</h3>
+
       <div class="well sidebar-nav">
         <ul class="nav nav-list">
           <li class="nav-header">Service Menu</li>
@@ -18,7 +21,7 @@
 
     <div class="span8">
 
-      <h2>Amazon S3</h2>
+      <h2>Intro</h2>
       <p>
         Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
