Hide the initial page since it looks jumpy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Homepage
 tagline: Node.js modules for talking to lots of Web Service APIs.
 sitemap : true
 ---
-<div class="content content-home">
+<div class="content content-home" style="display: none;">
 
   <div class="hero-unit">
     <h1>AwsSum</h1>
