Put the latest version up

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ sitemap : true
 <div class="content content-home" style="display: none;">
 
   <div class="hero-unit">
-    <h1>AwsSum</h1>
+    <h1>AwsSum <small>latest v0.7.0</small</h1>
     <p>
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
