More stuff in the hero unit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@ sitemap : true
       <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
       <a class="btn btn-primary btn-large" href="http://twitter.com/andychilton">Follow chilts on Twitter &raquo;</a>
     </p>
+    <p>
+      <strong>IRC</strong>: #awssum on Freenode
+      <br>
+      <strong>Email</strong>: chilts@appsattic.com
+      <br>
+      <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
+    </p>
   </div>
 
   <div class="row-fluid">
