Add the proper Twitter follow button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ sitemap : true
     <p>
       <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">Git Repo &raquo;</a>
       <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
-      <a class="btn btn-primary btn-large" href="http://twitter.com/andychilton">Follow chilts on Twitter &raquo;</a>
     </p>
     <p>
       <strong>IRC</strong>: #awssum on Freenode
@@ -22,6 +21,8 @@ sitemap : true
       <strong>Email</strong>: chilts@appsattic.com
       <br>
       <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
+      <br>
+      <strong>Twitter Updates</strong> <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
     </p>
   </div>
 
