--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ sitemap : true
       <br>
       <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
       <br>
-      <strong>Twitter Updates</strong> <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
+      <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
     </p>
   </div>
 
