Tighten things up a bit

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ sitemap : true
 <div class="content content-home" style="display: none;">
 
   <div class="hero-unit">
-    <h1>AwsSum <small>latest v0.7.0</small</h1>
+    <h1>AwsSum <small>v0.7.0</small</h1>
     <p>
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
-      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">Git Repo &raquo;</a>
-      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
+      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">Git &raquo;</a>
+      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">NPM &raquo;</a>
     </p>
     <p>
       <strong>IRC</strong>: #awssum on Freenode
