--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -11,36 +11,82 @@
           <li class="nav-header">Service Menu</li>
           <li><a href="#amazon-s3/intro">Intro</a></li>
           <li class="nav-header">Operations on the Service</li>
-          <li><a href="#amazon-s3/ListBuckets">ListBuckets</a></li>
-          <li><a href="#amazon-s3/ListObjects">ListObjects</a></li>
-          <li><a href="#amazon-s3/PutObject">PutObject</a></li>
-          <li><a href="#amazon-s3/GetObject">GetObject</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTServiceGET.html">RESTServiceGET</a></li>
+          <li class="nav-header">Operations on Buckets</li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketDELETE.html">RESTBucketDELETE</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketDELETElifecycle.html">RESTBucketDELETElifecycle</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketDELETEpolicy.html">RESTBucketDELETEpolicy</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketDELETEwebsite.html">RESTBucketDELETEwebsite</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGET.html">RESTBucketGET</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETacl.html">RESTBucketGETacl</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETlifecycle.html">RESTBucketGETlifecycle</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETpolicy.html">RESTBucketGETpolicy</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETlocation.html">RESTBucketGETlocation</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETlogging.html">RESTBucketGETlogging</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETnotification.html">RESTBucketGETnotification</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETVersion.html">RESTBucketGETVersion</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTrequestPaymentGET.html">RESTrequestPaymentGET</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETversioningStatus.html">RESTBucketGETversioningStatus</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETwebsite.html">RESTBucketGETwebsite</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketHEAD.html">RESTBucketHEAD</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListMPUpload.html">mpUploadListMPUpload</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUT.html">RESTBucketPUT</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTacl.html">RESTBucketPUTacl</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlifecycle.html">RESTBucketPUTlifecycle</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTpolicy.html">RESTBucketPUTpolicy</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlogging.html">RESTBucketPUTlogging</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTnotification.html">RESTBucketPUTnotification</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTrequestPaymentPUT.html">RESTrequestPaymentPUT</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTVersioningStatus.html">RESTBucketPUTVersioningStatus</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTwebsite.html">RESTBucketPUTwebsite</a></li>
+          <li class="nav-header">Operations on Objects</li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectDELETE.html">RESTObjectDELETE</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/multiobjectdeleteapi.html">multiobjectdeleteapi</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGET.html">RESTObjectGET</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETacl.html">RESTObjectGETacl</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETtorrent.html">RESTObjectGETtorrent</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectHEAD.html">RESTObjectHEAD</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPOST.html">RESTObjectPOST</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUT.html">RESTObjectPUT</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUTacl.html">RESTObjectPUTacl</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectCOPY.html">RESTObjectCOPY</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadInitiate.html">mpUploadInitiate</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPart.html">mpUploadUploadPart</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPartCopy.html">mpUploadUploadPartCopy</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadComplete.html">mpUploadComplete</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadAbort.html">mpUploadAbort</a></li>
+          <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListParts.html">mpUploadListParts</a></li>
         </ul>
       </div><!-- /.well -->
     </div><!-- /.span4 -->
 
     <div class="span8">
 
-      <h2>Intro</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
+      <h2>Loading AwsSum's Amazon S3</h2>
+
 <pre>
-service.Operation(function(err, result) {
-    if (err) {
-        console.log('An error has occurred', err);
-        return;
-    }
-    console.log('Buckets', result);
+var awssum = require('awssum');
+var amazon = awssum.load('amazon/amazon');
+var S3 = awssum.load('amazon/s3').S3;
+
+var s3 = new S3({
+    'accessKeyId'     : process.env.accessKeyId,
+    'secretAccessKey' : process.env.secretAccessKey,
+    'region'          : amazon.US_EAST_1
 });
 </pre>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
+
+      <h2>Examples</h2>
+      <h3>List Buckets</h3>
+
+<pre>
+s3.ListBuckets(function(err, data) {
+    console.log("\nlisting all the buckets (no options given) - expecting success");
+    console.log(err, 'Error');
+    console.log(data, 'Data');
+});
+});
+</pre>
 
     </div><!-- /.span8 -->
 
