New front page buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ sitemap : true
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
-      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">Git &raquo;</a>
-      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">NPM &raquo;</a>
+      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">In Git &raquo;</a>
+      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
     </p>
     <p>
       <strong>IRC</strong>: #awssum on Freenode
