Try and highlight the JavaScript

--- a/f/amazon-s3.html
+++ b/f/amazon-s3.html
@@ -1,3 +1,5 @@
+---
+---
 <div class="content content-amazon-s3">
 
   <div class="row-fluid">
@@ -65,6 +67,7 @@
       <h2>Loading AwsSum's Amazon S3</h2>
 
 <pre>
+{% highlight javascript %}
 var awssum = require('awssum');
 var amazon = awssum.load('amazon/amazon');
 var S3 = awssum.load('amazon/s3').S3;
@@ -74,18 +77,20 @@ var s3 = new S3({
     'secretAccessKey' : process.env.secretAccessKey,
     'region'          : amazon.US_EAST_1
 });
+{% endhighlight %}
 </pre>
 
       <h2>Examples</h2>
       <h3>List Buckets</h3>
 
 <pre>
+{% highlight javascript %}
 s3.ListBuckets(function(err, data) {
     console.log("\nlisting all the buckets (no options given) - expecting success");
     console.log(err, 'Error');
     console.log(data, 'Data');
 });
-});
+{% endhighlight %}
 </pre>
 
     </div><!-- /.span8 -->
