Add more of the intro pages

--- a/f/installing.html
+++ b/f/installing.html
@@ -1,22 +1,29 @@
 <div class="content content-installing">
 
-<h1>Installing</h1>
+  <h1>Installing</h1>
 
-<p>
-  With NPM it's so easy to install AwsSum. Truly, the best package manager for any language.
-</p>
+  <p>
+    With NPM it's so easy to install AwsSum. Truly, the best package manager for any language.
+  </p>
 
-<pre>
-$ npm install awssum
-</pre>
+  <pre>
+  $ npm install awssum
+  </pre>
 
-<p>
-  Or you can get it from GitHub:
-</p>
+  <p>
+    Or you can get a tarball from GitHub:
+  </p>
 
-<pre>
-$ wget https://github.com/appsattic/node-awssum/zipball/master
-$ wget https://github.com/appsattic/node-awssum/tarball/master
-</pre>
+  <pre>
+  $ wget https://github.com/appsattic/node-awssum/tarball/master
+  </pre>
+
+  <p>
+    Or clone the repo using Git:
+  </p>
+
+  <pre>
+  $ git clone git://github.com/appsattic/node-awssum.git
+  </pre>
 
 </div>
