More formatting changes and now with headings

--- a/f/async.html
+++ b/f/async.html
@@ -1,6 +1,6 @@
 <div class="content content-async">
 
-<h1>Async</h1>
+<h1>How to do Async with AwsSum</h1>
 
 <p>
   Due to the fact that Node.js is non-blocking and we're doing a round trip through the internet, it's obvious that
