--- a/f/bugs.html
+++ b/f/bugs.html
@@ -1,21 +1,25 @@
 <div class="content content-bugs">
 
-<p>
-  When submitting a bug report, it's essential and really useful to do the following:
-</p>
+  <h1>Finding and Submitting Bugs</h1>
 
-<ul>
-  <li>check that this bug hasn't already been submitted</li>
-  <li>make sure your version of AwsSum is up to date (check you haven't pinned the version in your <code>package.json</code>)</li>
-  <li>include the node version number: <code>node --version</code></li>
-  <li>include the awssum version number: <code>cat ./node_modules/awssum/package.json</code></li>
-  <li>edit <code>./node_modules/awssum/lib/awssum.js</code> and change <code>var debug = false;</code> to <code>true</code></li>
-</ul>
+  <p>
+    When submitting a bug report, it's essential and really useful to do the following:
+  </p>
 
-<p>
-  Please include all this info in the bug report, which you should <a href="https://github.com/appsattic/node-awssum/issues">enter here</a>.
-</p>
+  <ul>
+    <li>check that this bug hasn't already been submitted</li>
+    <li>make sure your version of AwsSum is up to date (check you haven't pinned the version in your <code>package.json</code>)</li>
+    <li>include the node version number: <code>node --version</code></li>
+    <li>include the awssum version number: <code>cat ./node_modules/awssum/package.json</code></li>
+    <li>edit <code>./node_modules/awssum/lib/awssum.js</code> and change <code>var debug = false;</code> to <code>true</code></li>
+  </ul>
 
-<p>
-  Many thanks. :)
-</p>
+  <p>
+    Please include all this info in the bug report, which you should <a href="https://github.com/appsattic/node-awssum/issues">enter here</a>.
+  </p>
+
+  <p>
+    Many thanks. :)
+  </p>
+
+</div>
