Restructure of site, more static now :)

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 ---
-layout: default
-title: Homepage
-tagline: Node.js modules for talking to lots of Web Service APIs.
+id      : index
+layout  : default
+title   : Homepage
+tagline : Node.js modules for talking to lots of Web Service APIs.
 sitemap : true
 ---
-<div class="content content-home" style="display: none;">
+<div class="content content-home">
 
   <div class="hero-unit">
-    <h1>AwsSum <small>v0.7.0</small</h1>
+    <h1>AwsSum <small>v0.8.0</small</h1>
     <p>
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
       <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">In Git &raquo;</a>
-      <a class="btn btn-primary btn-large" href="http://search.npmjs.org/#/awssum/">On NPM &raquo;</a>
+      <a class="btn btn-primary btn-large" href="https://npmjs.org/package/awssum">On NPM &raquo;</a>
     </p>
     <p>
       <strong>IRC</strong>: #awssum on Freenode
