--- a/amazon-ec2.html
+++ b/amazon-ec2.html
@@ -5,36 +5,34 @@ title   : Amazon EC2
 tagline : Elastic Compute Cloud
 sitemap : true
 ---
-<div class="content">
+<div class="row-fluid">
 
-  <h2>Loading AwsSum's Amazon EC2</h2>
+  <div id="menu" class="span3">
+    <h2>Amazon EC2</h2>
 
-{% highlight javascript %}
-var awssum = require('awssum');
-var amazon = awssum.load('amazon/amazon');
-var Ec2 = awssum.load('amazon/ec2').Ec2;
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
 
-var ec2 = new Ec2({
-    'accessKeyId'     : process.env.accessKeyId,
-    'secretAccessKey' : process.env.secretAccessKey,
-    'region'          : amazon.US_EAST_1
-});
-{% endhighlight %}
+        <li class="tab-amazon-ec2 nav-header">&laquo; Amazon EC2</li>
+        <li><a href="#loading">Loading</a></li>
+        <li><a href="#regions">Regions</a></li>
 
-  <h2>Examples</h2>
-  <h3>Describe Instances</h3>
+        <li class="nav-header">Operations</li>
+        <li><a target="_new" href="#">ListInstances</a></li>
 
-{% highlight javascript %}
-ec2.DescribeInstances(function(err, data) {
-    // ...
-});
+      </ul>
+    </div><!-- /.well -->
 
-ec2.DescribeInstances({
-    FilterName  : [ 'ip-address', 'key-name' ],
-    FilterValue : [ [ '1.2.3.4', '5.6.7.8' ], [ 'my-key' ] ],
-}, function(err, data) {
-    // ...
-});
-{% endhighlight %}
+  </div><!-- /#menu -->
 
-</div><!-- /.content -->
+  <div id="content" class="span9">
+
+    <div class="content content-home">
+
+      ...etc...
+
+    </div><!-- /.content-home -->
+
+  </div><!-- /#content -->
+
+</div><!-- /.row-fluid -->
