--- a/amazon-s3.html
+++ b/amazon-s3.html
@@ -1,13 +1,79 @@
 ---
-id      : amazon-s3
+id      : skeleton
 layout  : default
-title   : Amazon S3
-tagline : Elastic Compute Cloud
+title   : Amazon S3???
+tagline : Simple Storage Service???
 sitemap : true
 ---
-<div class="content">
+<div class="row-fluid">
 
-  <h2>Loading AwsSum's Amazon S3</h2>
+  <div id="menu" class="span3">
+    <h2>Amazon S3</h2>
+
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
+
+        <li class="tab-amazon-s3 nav-header">&laquo; Amazon S3</li>
+        <li><a href="#loading">Loading</a></li>
+        <li><a href="#regions">Regions/EndPoints</a></li>
+
+        <li class="nav-header">Operations on the Service</li>
+        <li><a target="_new" href="http://goo.gl/ZXuPe">RESTServiceGET</a></li>
+        <li class="nav-header">Operations on Buckets</li>
+        <li><a target="_new" href="http://goo.gl/zVsy0">RESTBucketDELETE</a></li>
+        <li><a target="_new" href="http://goo.gl/s4pJA">RESTBucketDELETElifecycle</a></li>
+        <li><a target="_new" href="http://goo.gl/J3abr">RESTBucketDELETEpolicy</a></li>
+        <li><a target="_new" href="http://goo.gl/y1tSC">RESTBucketDELETEwebsite</a></li>
+        <li><a target="_new" href="http://goo.gl/b1mSD">RESTBucketGET</a></li>
+        <li><a target="_new" href="http://goo.gl/xuKcm">RESTBucketGETacl</a></li>
+        <li><a target="_new" href="http://goo.gl/5lcaM">RESTBucketGETlifecycle</a></li>
+        <li><a target="_new" href="http://goo.gl/oYzIF">RESTBucketGETpolicy</a></li>
+        <li><a target="_new" href="http://goo.gl/OH5KI">RESTBucketGETlocation</a></li>
+        <li><a target="_new" href="http://goo.gl/Wm5XB">RESTBucketGETlogging</a></li>
+        <li><a target="_new" href="http://goo.gl/ncze1">RESTBucketGETnotification</a></li>
+        <li><a target="_new" href="http://goo.gl/e4o8j">RESTBucketGETVersion</a></li>
+        <li><a target="_new" href="http://goo.gl/1wyHo">RESTrequestPaymentGET</a></li>
+        <li><a target="_new" href="http://goo.gl/2fhDX">RESTBucketGETversioningStatus</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETwebsite.html">RESTBucketGETwebsite</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketHEAD.html">RESTBucketHEAD</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListMPUpload.html">mpUploadListMPUpload</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUT.html">RESTBucketPUT</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTacl.html">RESTBucketPUTacl</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlifecycle.html">RESTBucketPUTlifecycle</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTpolicy.html">RESTBucketPUTpolicy</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlogging.html">RESTBucketPUTlogging</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTnotification.html">RESTBucketPUTnotification</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTrequestPaymentPUT.html">RESTrequestPaymentPUT</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTVersioningStatus.html">RESTBucketPUTVersioningStatus</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTwebsite.html">RESTBucketPUTwebsite</a></li>
+        <li class="nav-header">Operations on Objects</li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectDELETE.html">RESTObjectDELETE</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/multiobjectdeleteapi.html">multiobjectdeleteapi</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGET.html">RESTObjectGET</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETacl.html">RESTObjectGETacl</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETtorrent.html">RESTObjectGETtorrent</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectHEAD.html">RESTObjectHEAD</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPOST.html">RESTObjectPOST</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUT.html">RESTObjectPUT</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUTacl.html">RESTObjectPUTacl</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectCOPY.html">RESTObjectCOPY</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadInitiate.html">mpUploadInitiate</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPart.html">mpUploadUploadPart</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPartCopy.html">mpUploadUploadPartCopy</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadComplete.html">mpUploadComplete</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadAbort.html">mpUploadAbort</a></li>
+        <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListParts.html">mpUploadListParts</a></li>
+
+      </ul>
+    </div><!-- /.well -->
+
+  </div><!-- /#menu -->
+
+  <div id="content" class="span9">
+
+    <div class="content content-home">
+
+      <h2>Loading AwsSum's Amazon S3</h2>
 
 {% highlight javascript %}
 var awssum = require('awssum');
@@ -21,8 +87,8 @@ var s3 = new S3({
 });
 {% endhighlight %}
 
-  <h2>Examples</h2>
-  <h3>List Buckets</h3>
+      <h2>Examples</h2>
+      <h3>List Buckets</h3>
 
 {% highlight javascript %}
 s3.ListBuckets(function(err, data) {
@@ -32,4 +98,8 @@ s3.ListBuckets(function(err, data) {
 });
 {% endhighlight %}
 
-</div><!-- /.content -->
+    </div><!-- /.content-home -->
+
+  </div><!-- /#content -->
+
+</div><!-- /.row-fluid -->
