--- a/index.html
+++ b/index.html
@@ -5,58 +5,86 @@ title   : Homepage
 tagline : Node.js modules for talking to lots of Web Service APIs.
 sitemap : true
 ---
-<div class="content content-home">
+<div class="row-fluid">
 
-  <div class="hero-unit">
-    <h1>AwsSum <small>v0.8.0</small</h1>
-    <p>
-      Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
-    </p>
-    <p>
-      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">In Git &raquo;</a>
-      <a class="btn btn-primary btn-large" href="https://npmjs.org/package/awssum">On NPM &raquo;</a>
-    </p>
-    <p>
-      <strong>IRC</strong>: #awssum on Freenode
-      <br>
-      <strong>Email</strong>: chilts@appsattic.com
-      <br>
-      <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
-      <br>
-      <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
-    </p>
-  </div>
+  <div id="menu" class="span3">
+    <h2>AwsSum v0.8.0</h2>
 
-  <div class="row-fluid">
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
 
-    <div class="span4">
-      <h2>Used by AppsAttic</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
-    <div class="span4">
-      <h2>Used by SomeoneFinish</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
-    <div class="span4">
-      <h2>Used by IndoGames</h2>
-      <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui.
-      </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div><!-- /.span4 -->
+        <li class="tab-basics nav-header">Basics</li>
+        <li class="tab-installing"><a href="#installing">Installing</a></li>
+        <li class="tab-loading"><a href="#loading">Loading</a></li>
+        <li class="tab-async"><a href="#async">Async</a></li>
+        <li class="tab-operations"><a href="#operations">Operations</a></li>
 
-  </div><!-- /.row-fluid -->
+        <li class="tab-amazon nav-header">Web Services</li>
+        <li class="tab-amazon-s3"><a href="amazon.html">Amazon</a></li>
 
-</div><!-- /.content-home -->
+      </ul>
+    </div><!-- /.well -->
+
+  </div><!-- /#menu -->
+
+  <div id="content" class="span9">
+
+    <div class="content content-home">
+
+      <div class="hero-unit">
+        <h1>AwsSum <small>v0.8.0</small></h1>
+        <p>
+          Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
+        </p>
+        <p>
+          <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">In Git &raquo;</a>
+          <a class="btn btn-primary btn-large" href="https://npmjs.org/package/awssum">On NPM &raquo;</a>
+        </p>
+        <p>
+          <strong>IRC</strong>: #awssum on Freenode
+          <br>
+          <strong>Email</strong>: chilts@appsattic.com
+          <br>
+          <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
+          <br>
+          <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
+        </p>
+      </div>
+
+      <div class="row-fluid">
+
+        <div class="span4">
+          <h2>Used by AppsAttic</h2>
+          <p>
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+            euismod. Donec sed odio dui.
+          </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <h2>Used by SomeoneFinish</h2>
+          <p>
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+            euismod. Donec sed odio dui.
+          </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <h2>Used by IndoGames</h2>
+          <p>
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+            euismod. Donec sed odio dui.
+          </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+
+      </div><!-- /.row-fluid -->
+
+    </div><!-- /.content-home -->
+
+  </div><!-- /#content -->
+
+</div><!-- /.row-fluid -->
