Add the Amazon menu

--- a/amazon-ec2.html
+++ b/amazon-ec2.html
@@ -15,7 +15,7 @@ sitemap : true
 
         <li class="tab-amazon-ec2 nav-header">&laquo; Amazon EC2</li>
         <li><a href="#loading">Loading</a></li>
-        <li><a href="#regions">Regions</a></li>
+        <li><a href="#regions">Regions/EndPoints</a></li>
 
         <li class="nav-header">Operations</li>
         <li><a target="_new" href="#">ListInstances</a></li>
