--- a/amazon-s3.html
+++ b/amazon-s3.html
@@ -1,8 +1,8 @@
 ---
 id      : skeleton
 layout  : default
-title   : Amazon S3???
-tagline : Simple Storage Service???
+title   : Amazon S3
+tagline : Simple Storage Service
 sitemap : true
 ---
 <div class="row-fluid">
