Try an internal and external link

--- a/amazon-s3.html
+++ b/amazon-s3.html
@@ -18,7 +18,10 @@ sitemap : true
         <li><a href="#regions">Regions/EndPoints</a></li>
 
         <li class="nav-header">Operations on the Service</li>
-        <li><a target="_new" href="http://goo.gl/ZXuPe">RESTServiceGET</a></li>
+        <li>
+          <a target="_new" href="#ListBuckets">RESTServiceGET</a>
+          <a target="_new" href="http://goo.gl/ZXuPe"><img src="http://cf.appsattic.com/i/link_go.png"></a>
+        </li>
         <li class="nav-header">Operations on Buckets</li>
         <li><a target="_new" href="http://goo.gl/zVsy0">RESTBucketDELETE</a></li>
         <li><a target="_new" href="http://goo.gl/s4pJA">RESTBucketDELETElifecycle</a></li>
