Test an alternative for external links

--- a/amazon-s3.html
+++ b/amazon-s3.html
@@ -18,10 +18,7 @@ sitemap : true
         <li><a href="#regions">Regions/EndPoints</a></li>
 
         <li class="nav-header">Operations on the Service</li>
-        <li>
-          <a target="_new" href="#ListBuckets">RESTServiceGET</a>
-          <a target="_new" href="http://goo.gl/ZXuPe"><img src="http://cf.appsattic.com/i/link_go.png"></a>
-        </li>
+        <li><a target="_new" href="#ListBuckets">ListBuckets</a></li>
         <li class="nav-header">Operations on Buckets</li>
         <li><a target="_new" href="http://goo.gl/zVsy0">RESTBucketDELETE</a></li>
         <li><a target="_new" href="http://goo.gl/s4pJA">RESTBucketDELETElifecycle</a></li>
@@ -91,7 +88,10 @@ var s3 = new S3({
 {% endhighlight %}
 
       <h2>Examples</h2>
-      <h3>List Buckets</h3>
+      <h3 name="ListBuckets">
+        List Buckets
+        <a href="http://goo.gl/ZXuPe"><img src="http://cf.appsattic.com/i/link_go.png"></a>
+      </h3>
 
 {% highlight javascript %}
 s3.ListBuckets(function(err, data) {
