--- a/amazon-s3.html
+++ b/amazon-s3.html
@@ -90,7 +90,7 @@ var s3 = new S3({
       <h2>Examples</h2>
       <h3 name="ListBuckets">
         List Buckets
-        <a href="http://goo.gl/ZXuPe"><img src="http://cf.appsattic.com/i/link_go.png"></a>
+        <small><a href="http://goo.gl/ZXuPe">Open on AWS</a></small>
       </h3>
 
 {% highlight javascript %}
