Tell the user to put more details into issues

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ sitemap : true
           <br>
           <strong>Email</strong>: chilts@appsattic.com
           <br>
-          <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a>
+          <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>please provide an example request/response</small>
           <br>
           <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
         </p>
