Add the example page

--- a/async.html
+++ b/async.html
@@ -26,7 +26,7 @@ service.Operation(function(err, result) {
 <p>
   Pretty much all calls you'll ever make will look fairly similar to the one above. If you're using some kind of flow
   control library to make things easier, then I don't need to explain further since you've already figured the whole
-  async+callbacks thing out. :)
+  async+callbacks thing out.
 </p>
 
 </div>
