--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@ sitemap : true
         <li class="tab-installing"><a href="installing.html">Installing</a></li>
         <li class="tab-loading"><a href="loading.html">Loading</a></li>
         <li class="tab-async"><a href="async.html">Async</a></li>
+        <li class="tab-examples"><a href="example.html">Full Example</a></li>
 
         <li class="tab-amazon nav-header">Web Services</li>
         <li class="tab-amazon"><a href="amazon.html">Amazon</a>
           <ul>
             <li class="tab-amazon-s3"><a href="amazon-s3.html">Simple Storage Service (S3)</a>
+              <!--
             <li class="tab-amazon-ec2"><a href="amazon-ec2.html">Elastic Compute Cloud (EC2)</a>
             <li class="tab-amazon-emr"><a href="amazon-emr.html">Elastic MapReduce (EMR)</a>
             <li class="tab-amazon-simpledb"><a href="amazon-simpledb.html">SimpleDB</a>
@@ -44,6 +46,7 @@ sitemap : true
             <li class="tab-amazon-importexport"><a href="amazon-importexport.html">Import/Export</a>
             <li class="tab-amazon-storagegateway"><a href="amazon-storagegateway.html">Storage Gateway</a>
             <li class="tab-amazon-cloudsearch"><a href="amazon-cloudsearch.html">CloudSearch</a>
+              -->
           </ul>
         </li>
 
