Make sure each page inherits from the default layout

--- a/about.html
+++ b/about.html
@@ -1,3 +1,10 @@
+---
+id      : about
+layout  : default
+title   : About
+tagline : The Story about AwsSum
+sitemap : true
+---
 <div class="content content-about">
 
 <p>
