--- a/async.html
+++ b/async.html
@@ -1,3 +1,10 @@
+---
+id      : async
+layout  : default
+title   : Async
+tagline : The way of Node.js
+sitemap : true
+---
 <div class="content content-async">
 
 <h1>How to do Async with AwsSum</h1>
