--- a/bugs.html
+++ b/bugs.html
@@ -1,3 +1,10 @@
+---
+id      : bugs
+layout  : default
+title   : Bugs
+tagline : And how to report them properly
+sitemap : true
+---
 <div class="content content-bugs">
 
   <h1>Finding and Submitting Bugs</h1>
