--- a/example.html
+++ b/example.html
@@ -1,3 +1,10 @@
+---
+id      : example
+layout  : default
+title   : Example
+tagline : Giving you the gist
+sitemap : true
+---
 <div class="content content-async">
 
 <h1>Examples on this Site</h1>
