--- a/installing.html
+++ b/installing.html
@@ -1,3 +1,10 @@
+---
+id      : installing
+layout  : default
+title   : Installing
+tagline : npm rocks!
+sitemap : true
+---
 <div class="content content-installing">
 
   <h1>Installing</h1>
