--- a/links.html
+++ b/links.html
@@ -1,3 +1,10 @@
+---
+id      : links
+layout  : default
+title   : Links
+tagline : Links to mentions about AwsSum
+sitemap : true
+---
 <div class="content content-links">
 
   <h1>Links</h1>
