--- a/loading.html
+++ b/loading.html
@@ -1,3 +1,10 @@
+---
+id      : loading
+layout  : default
+title   : Loading
+tagline : How to require()
+sitemap : true
+---
 <div class="content content-loading">
 
   <h1>Loading AwsSum</h1>
