--- a/operations.html
+++ b/operations.html
@@ -1,3 +1,10 @@
+---
+id      : operations
+layout  : default
+title   : Operations
+tagline : All your ops are belong to us
+sitemap : true
+---
 <div class="content content-operations">
 
   <h1>Operations</h1>
